  it's not filled).
- Added -icase option for case insensitive search by default.
- Added -wrap option, which makes searches wrap
- Added status line sequence %x: shows current context (function
  name if you're editing C).
- Added tab completion at search prompts and ^K <return> for tab
  completion in text windows.
- Warn if file changed on save.

JOE 3.0 (23 APR 2004)
- UTF-8
- Syntax highlighting
- Fixed ^C and ^D in shell windows
- Auto detect CR-LF (MS-DOS) files
- Fixed (or improved, anyway) shell windows for Cygwin
- During search & replace, the scroll found text on to screen
- File selection window is now 4 lines instead of 1
- David Phillips "smart home" key.
- Enhanced ^K , and ^K .
- Enhanced overtype mode
- Added picture drawing mode (can hit right arrow at ends of lines)
- Auto detect preferred indentation character TAB or SPACE

Overview of changes in JOE 2.9.8 (5 May 2003)
- fixed signal handling
- return of the context help
- fixed segfault when moving rectangular block
- code clean up
- killed deadlock when reformatting paragraph
- fixed skiptop handling
- SECURITY: drop suid and sgid bits when creating backup files
- fixed segfaults in isalpha()-like functions

Overview of changes in JOE 2.9.8-pre1 (14 Dec 2001)
- BUGFIX: don't exchange start and end point of the block in some cases
- defaulting to turn off -asis (locales take care of this; if joe doesn't
  print characters with 8th bit set properly, check if you have properly
  installed and set locales or simply turn on -asis option in joerc)
- fix to make joe compilable on *BSD
- fix to make joe compilable on systems without siginterrupt()
- added "support" for End key
- code cleanup: warnings removal (some still remaining, working on it)

Overview of changes in JOE 2.9.7 (7 Nov 2001)
- BUGFIX: always save (even not-modified) file
- BUGFIX: solve problem with freezing after saving unmodified file
- small documentation update

Overview of Changes in JOE 2.9.7-pre3 (29 Oct 2001)