@@ -22,6 +22,7 @@ JOE 3.1
 - Added tab completion at search prompts and ^K <return> for tab
   completion in text windows.
 - Warn if file changed on save.
+- Added Ctrl-space block selection method
 
 JOE 3.0 (23 APR 2004)
 - UTF-8
